Pan 21 (#8)
* PAN-18
- Layout für Template-Erstellung hinzugefügt
- FX-Tests erstellt

* PAN-21
- FieldTypes hinzugefügt

* PAN-21
- Issues behoben

* PAN-21
- erste Review-Anmerkungen umgesetzt

* PAN-21
- weitere Review-Anmerkungen umgesetzt

* PAN-21

Co-authored-by: krankkk <59603675+krankkkk@users.noreply.github.com>