@@ -2,6 +2,7 @@ package de.baleipzig.pdfextraction.controller;
 
 import de.baleipzig.pdfextraction.common.alert.AlertUtils;
 import de.baleipzig.pdfextraction.common.controller.ControllerUtils;
+import de.baleipzig.pdfextraction.fieldtype.FieldTypes;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Alert;
@@ -13,18 +14,30 @@ import javafx.scene.paint.Color;
 import javafx.stage.Stage;
 
 import java.net.URL;
-import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.ResourceBundle;
+import java.util.Set;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 public class CreateTemplateController implements Initializable {
 
     @FXML
     public GridPane dataGridPane;
-    private final VBox vBox = new VBox(10);
+
+    @FXML
     public AnchorPane fieldAnchorPane;
+
+    @FXML
     public TextField insuranceTextField;
+
+    @FXML
     public TextField templateNameTextField;
+
+    private final VBox vBox = new VBox(10);
+
+    private final Set<String> chosenFieldtypes = new HashSet<>();
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
@@ -33,25 +46,31 @@ public class CreateTemplateController implements Initializable {
     }
 
     @FXML
-    public void AddFieldButtonOnClick() {
+    public void addFieldButtonOnClick() {
 
-        //TODO Liste aller unterstützten FieldTypes noch hinzufügen
-        List<String> choices = new ArrayList<>();
-        choices.add("Field-Typ 1");
-        choices.add("Field-Typ 2");
-        choices.add("Field-Typ 3");
+        Set<String> fieldTypes = FieldTypes.getAllFieldTypes()
+                .stream()
+                .map(FieldTypes::getName)
+                .filter(Predicate.not(this.chosenFieldtypes::contains))
+                .collect(Collectors.toSet());
 
-        ChoiceDialog<String> dialog = new ChoiceDialog<>("Field-Typ 1", choices);
+        if (fieldTypes.isEmpty()){
+            AlertUtils.showAlert(Alert.AlertType.WARNING, "Warnung", "", "Es sind bereits alle verfügbaren Typen hinzugefügt worden.");
+            return;
+        }
+
+
+        ChoiceDialog<String> dialog = new ChoiceDialog<>(fieldTypes.iterator().next(), fieldTypes);
         dialog.setTitle("Feld-Typ");
         dialog.setHeaderText("Wähle einen Feld-Typ");
 
         dialog.showAndWait().ifPresent(fieldType -> {
-            vBox.getChildren().add(new Label(fieldType));
+            chosenFieldtypes.add(fieldType);
             Pane pane = new Pane();
             pane.setPrefWidth(200);
             pane.setPrefHeight(30);
             pane.setBorder(new Border(new BorderStroke(Color.BLACK, BorderStrokeStyle.SOLID, CornerRadii.EMPTY, BorderWidths.DEFAULT)));
-            vBox.getChildren().add(pane);
+            vBox.getChildren().addAll(new Label(fieldType), pane);
         });
     }
 
@@ -79,8 +98,14 @@ public class CreateTemplateController implements Initializable {
     }
 
     private boolean isDataIncomplete() {
+        final List<String> allTypes = FieldTypes.getAllFieldTypes()
+                .stream()
+                .map(FieldTypes::getName)
+                .toList();
 
-        return insuranceTextField.getText().trim().isEmpty() || templateNameTextField.getText().trim().isEmpty()
-                || fieldAnchorPane.getChildren().size() == 0;
+        return !this.chosenFieldtypes.containsAll(allTypes)
+                || insuranceTextField.getText().isBlank()
+                || templateNameTextField.getText().isBlank()
+                || fieldAnchorPane.getChildren().isEmpty();
     }
 }
